--- a/src/shared/ui/button/Button.module.css
+++ b/src/shared/ui/button/Button.module.css
@@ -1,6 +1,7 @@
 .button {
-  padding: 18px 30px;
+  padding: 16px 30px;
   border: none;
+  font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.01em;
@@ -9,4 +10,15 @@
   background-color: #6c5fbc;
   border-radius: 12px;
   cursor: pointer;
+}
+
+.button:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 550px) {
+  .button {
+    padding: 10px 15px;
+    font-size: 14px;
+  }
 }
