--- a/src/shared/ui/logo/Logo.module.css
+++ b/src/shared/ui/logo/Logo.module.css
@@ -2,3 +2,10 @@
   width: 117px;
   height: 43px;
 }
+
+@media screen and (max-width: 500px) {
+  .logo {
+    width: 80px;
+    height: 30px;
+  }
+}
