--- a/src/widgets/faq/ui/Faq.module.css
+++ b/src/widgets/faq/ui/Faq.module.css
@@ -4,6 +4,7 @@
 
 .containerSection {
   padding-top: 170px;
+  padding-bottom: 164px;
   margin: 0 auto;
   max-width: 1152px;
   display: flex;
@@ -14,6 +15,7 @@
 
 .title {
   padding-bottom: 115px;
+  padding-right: 9px;
   width: 408px;
   font-family: 'Poppins', sans-serif;
   font-size: 45px;
@@ -24,4 +26,37 @@
 
 .titleSpan {
   color: #6c5fbc;
+}
+
+.faqCardsList {
+  padding-left: 23px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+}
+
+@media screen and (max-width: 1300px) {
+  .containerSection {
+    padding-right: 20px;
+  }
+  .title {
+    font-size: 24px;
+    padding-bottom: 30px;
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .containerSection {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    padding-right: 20px;
+  }
+  .title {
+    padding: 0;
+    text-align: center;
+    font-size: 19px;
+    width: 100%;
+  }
 }
