--- a/src/widgets/feedBack/ui/FeedBack.module.css
+++ b/src/widgets/feedBack/ui/FeedBack.module.css
@@ -8,6 +8,7 @@
 }
 
 .title {
+  padding-left: 25px;
   padding-bottom: 80px;
   font-family: 'Poppins', sans-serif;
   font-size: 45px;
@@ -22,7 +23,7 @@
 }
 
 .commentsList {
-  width: 1700px;
+  width: 2032px;
   padding-left: 117px;
   list-style: none;
   display: flex;
@@ -30,6 +31,7 @@
 }
 
 .containerComment {
+  padding-bottom: 12px;
   display: flex;
   justify-content: space-between;
 }
@@ -43,11 +45,16 @@
 }
 
 .comment {
-  padding: 40px 42px 47px 42px;
+  padding: 37px 42px 47px 42px;
   width: 528px;
   height: 114px;
   background-color: #fff;
   border-radius: 20px;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26.12px;
+  color: #636363;
 }
 
 .partiallyHidden {
@@ -61,4 +68,85 @@
   font-size: 20px;
   line-height: 31.34px;
   color: #030314;
+}
+
+.commentText {
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 26px;
+  color: #636363;
+}
+
+.scroll {
+  margin-top: 40px;
+  display: flex;
+  width: 667px;
+  height: 11px;
+  background-color: rgb(108, 95, 188, 0.2);
+  border-radius: 50px;
+}
+.scroll::before {
+  content: '';
+  width: 191px;
+  background-color: #6c5fbc;
+  border-radius: 50px;
+}
+
+.containerFlex {
+  display: flex;
+  gap: 47px;
+}
+
+.containerColumn {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 1200px) {
+  .containerSection {
+    padding: 70px 20px;
+  }
+  .commentsList {
+    flex-direction: column;
+  }
+  .commentWithQuote {
+    padding: 32px 25px;
+    width: 100%;
+    max-width: 350px;
+  }
+
+  .comment {
+    padding: 40px 25px;
+    width: 100%;
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .commentsList {
+    padding: 0;
+  }
+  .title {
+    font-size: 24px;
+    padding-bottom: 30px;
+  }
+  .nickName {
+    font-size: 16px;
+  }
+  .commentText {
+    font-size: 14px;
+  }
+  .comment {
+    font-size: 14px;
+    max-width: 250px;
+  }
+  .commentWithQuote {
+    max-width: 250px;
+  }
+
+  .containerFlex {
+    gap: 20px;
+  }
 }
