--- a/src/widgets/feedBack/ui/FeedBack.module.css
+++ b/src/widgets/feedBack/ui/FeedBack.module.css
@@ -23,85 +23,30 @@
 }
 
 .commentsList {
-  width: 2032px;
-  padding-left: 117px;
+  /* padding-left: 200px; */
+  /* width: 1732px; */
+  margin: 0 auto;
+  max-width: 1440px;
+
   list-style: none;
   display: flex;
+  justify-content: center;
   gap: 46px;
 }
 
-.containerComment {
-  padding-bottom: 12px;
-  display: flex;
-  justify-content: space-between;
+.swiper {
+  /* max-width: 1400px; */
+  width: 100%;
+  padding-left: 70px;
 }
 
-.commentWithQuote {
-  padding: 40px 42px 47px 42px;
-  width: 528px;
-  height: 170px;
-  border-radius: 20px;
-  background-color: #fff;
+.swiperSlide {
+  margin-bottom: 50px;
+  max-width: 528px;
 }
 
-.comment {
-  padding: 37px 42px 47px 42px;
-  width: 528px;
-  height: 114px;
-  background-color: #fff;
-  border-radius: 20px;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 26.12px;
-  color: #636363;
-}
-
-.partiallyHidden {
-  /* width: 100%; */
-  overflow: hidden;
-}
-
-.nickName {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 31.34px;
-  color: #030314;
-}
-
-.commentText {
-  font-family: 'Poppins', sans-serif;
-  font-size: 18px;
-  font-style: italic;
-  font-weight: 400;
-  line-height: 26px;
-  color: #636363;
-}
-
-.scroll {
-  margin-top: 40px;
-  display: flex;
-  width: 667px;
-  height: 11px;
-  background-color: rgb(108, 95, 188, 0.2);
-  border-radius: 50px;
-}
-.scroll::before {
-  content: '';
-  width: 191px;
-  background-color: #6c5fbc;
-  border-radius: 50px;
-}
-
-.containerFlex {
-  display: flex;
-  gap: 47px;
-}
-
-.containerColumn {
-  display: flex;
-  flex-direction: column;
+.swiper + .swiper-pagination-bullet {
+  width: 12px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -110,17 +55,6 @@
   }
   .commentsList {
     flex-direction: column;
-  }
-  .commentWithQuote {
-    padding: 32px 25px;
-    width: 100%;
-    max-width: 350px;
-  }
-
-  .comment {
-    padding: 40px 25px;
-    width: 100%;
-    max-width: 350px;
   }
 }
 
@@ -132,21 +66,16 @@
     font-size: 24px;
     padding-bottom: 30px;
   }
-  .nickName {
-    font-size: 16px;
+  .swiper {
+    padding-left: 30px;
   }
-  .commentText {
-    font-size: 14px;
+  .swiperSlide {
+    max-width: 100%;
   }
-  .comment {
-    font-size: 14px;
-    max-width: 250px;
-  }
-  .commentWithQuote {
-    max-width: 250px;
-  }
+}
 
-  .containerFlex {
-    gap: 20px;
+@media screen and (max-width: 425px) {
+  .swiper {
+    padding-left: 0px;
   }
 }
