--- a/src/widgets/topFood/ui/TopFood.module.css
+++ b/src/widgets/topFood/ui/TopFood.module.css
@@ -7,6 +7,8 @@
   padding-bottom: 227px;
   margin: 0 auto;
   max-width: 1260px;
+  display: flex;
+  flex-direction: column;
   border-bottom: 1px solid #cbcbcb;
 }
 .title {
@@ -29,6 +31,14 @@
   justify-content: center;
   gap: 25px 25px;
   grid-template-columns: repeat(3, minmax(0, 400px));
+}
+
+.errorApi {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 25.56px;
+  color: red;
+  align-self: center;
 }
 
 @media screen and (max-width: 1300px) {
