--- a/src/widgets/promo/ui/Promo.module.css
+++ b/src/widgets/promo/ui/Promo.module.css
@@ -74,7 +74,7 @@
 
 .classBtnSecondary {
   border: 1.5px solid #6c5fbc;
-  background-color: #fff;
+  background-color: #f9f9f9;
   color: #6c5fbc;
 }
 
