--- a/src/widgets/articles-blog/ui/ArticlesBlog.module.css
+++ b/src/widgets/articles-blog/ui/ArticlesBlog.module.css
@@ -33,6 +33,35 @@
   grid-template-columns: repeat(3, minmax(0, 349px));
 }
 
+.containerPagination {
+  padding-top: 80px;
+  margin: 0 auto;
+  max-width: 170px;
+  display: flex;
+  gap: 80px;
+}
+
+.paginationBtn {
+  width: 46px;
+  height: 30px;
+  border: none;
+  background: url('../../../shared/assets/svg/nextPageBtn.svg') no-repeat;
+  cursor: pointer;
+}
+
+.paginationBtn:disabled {
+  cursor: default;
+  opacity: 0.3;
+}
+
+.paginationBtn:hover:enabled {
+  opacity: 0.7;
+}
+
+.prevPageBtn {
+  rotate: 180deg;
+}
+
 @media screen and (max-width: 1170px) {
   .articlesList {
     grid-template-columns: repeat(2, minmax(0, 349px));
