--- a/src/shared/ui/button/Button.module.css
+++ b/src/shared/ui/button/Button.module.css
@@ -15,6 +15,11 @@
   opacity: 0.8;
 }
 
+.button:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 @media screen and (max-width: 550px) {
   .button {
     padding: 10px 15px;
