--- a/src/entities/articleCard/ui/ArticleCard.module.css
+++ b/src/entities/articleCard/ui/ArticleCard.module.css
@@ -63,10 +63,10 @@
   line-height: 26.12px;
   color: #081420;
 
-  display: -webkit-box;
+  /* display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 3; */
 }
 
 @media screen and (max-width: 560px) {
